- Added wxWindow::NavigateIn() in addition to existing Navigate()
- Add support for <data> tags to wxrc
- Support wxAPPLY and wxCLOSE in CreateStdDialogButtonSizer() (Marcin Wojdyr)
- Show standard options in wxCmdLineParser usage message (Francesco Montorsi)
- Added wxRect::operator+ (union) and * (intersection) (bdonner)

wxGTK:

- Support for markup and ellipsization in wxStaticText (Francesco Montorsi)
- Native implementation for wxHyperlinkCtrl (Francesco Montorsi)
- Native keyboard navigation implementation
- Added wxCB_SORT support to wxComboBox (Evgeniy Tarassov)
- Don't overwrite primary selection with clipboard and vice versa
- Implemented support for underlined fonts in wxStaticText.
- wxTopLevelWindow::SetSizeHints size increments now work.
- wxTopLevelWindow::GetSize() returns the size including the WM decorations.
- wxTopLevelWindow::GetClientSize() returns 0x0 when the window is minimized.
- Added support for colour cursors (Pascal Monasse).
- Pass current control text to EVT_TEXT handler for wxSpinCtrl (John Ratliff)
- Added gtk.tlw.can-set-transparency system option

wxMac:

- Better IconRef support (Alan Shouls)
- Added support for changing button labels in wxMessageDialog (Gareth Simpson)
- Fix duplicate (empty) help menu in non-English programs (Andreas Jacobs)
- Allow accelerators to be used with buttons too (Ryan Wilcox)
- Support resource forks in wxCopyFile() (Hank Schultz)

wxMSW:

- Fixed infinite loop in wxThread::Wait() in console applications.
- Return the restored window size from GetSize() when window is minimized.
- wxCheckListBox now looks more natively, especially under XP (Marcin Malich)

wxX11:

- Added mouse wheel support (David Hart)
- Make Enter key activate the default button (David Hart)


2.8.5
-----

All (GUI):

- Added colour normalization to PNM image handler (Ray Johnston)
- Fixed selecting part of word from right to left in wxHTML (Michael Hieke)
- Selecting text in wxHTML with character precision was made easier, it's